--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.modelmapper:modelmapper:2.3.8'
+    implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.0'
+    implementation 'org.liquibase:liquibase-core:4.1.1'
+    implementation 'org.yaml:snakeyaml:1.27'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
