--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=validate
 spring.liquibase.change-log=classpath:changelog/changelog-master.yml
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
