--- a/src/main/resources/changelog/changesets/initial-tables.yml
+++ b/src/main/resources/changelog/changesets/initial-tables.yml
@@ -9,7 +9,8 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  type: uuid
+                  type: bigint
+                  autoIncrement: true
                   constraints:
                     primaryKey: true
                     nullable: false
@@ -23,8 +24,8 @@ databaseChangeLog:
                   name: password
                   type: varchar(255)
               - column:
-                  name: firstName
+                  name: first_name
                   type: varchar(255)
               - column:
-                  name: lastName
+                  name: last_name
                   type: varchar(255)
